Blog edit and delete functionality added

--- a/blogapp/templates/my_profile.html
+++ b/blogapp/templates/my_profile.html
@@ -22,7 +22,7 @@
                         <div class="modal-content">
 
                             <div class="modal-header">
-                                <h5 class="modal-title" id="profilePicLabel">Modal title</h5>
+                                <h5 class="modal-title" id="profilePicLabel">Profile Picture</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
@@ -295,13 +295,14 @@
                     <div class="d-flex justify-content-between">
                         <!-- avatar -->
                         <div class="d-flex">
-                            <img src="{{blog.user.profile_pic.url}}" alt="avatar" class="rounded-circle me-2"
+                            <img src="{{blog.user.profile_pic.url}}" alt="avatar" class="rounded-circle me-2 mt-1"
                                 style="width: 38px; height: 38px; object-fit: cover" />
                             <div>
-                                <p class="m-0 fw-bold">{{blog.user}}</p>
-                                <span class="text-muted fs-7">{{blog.updated_at | timesince}}</span>
+                                <p class="m-0 fw-bold text-muted">{{blog.user}}</p>
+                                <span class="text-muted fs-7">{{blog.updated_at | timesince}} ago</span>
                             </div>
                         </div>
+                        {% if blog.user == request.user %}
                         <!-- edit -->
                         <i class="fas fa-ellipsis-h" type="button" id="post1Menu" data-bs-toggle="dropdown"
                             aria-expanded="false"></i>
@@ -314,7 +315,7 @@
                             justify-content-around
                             align-items-center
                             fs-7
-                          " href="#">
+                          " href="{% url 'blog-edit' blog.id %}">
                                     Edit Post</a>
                             </li>
                             <li class="d-flex align-items-center">
@@ -324,16 +325,17 @@
                             justify-content-around
                             align-items-center
                             fs-7
-                          " href="#">
+                          " href="{% url 'blog-delete' blog.id %}">
                                     Delete Post</a>
                             </li>
                         </ul>
+                        {% endif %}
                     </div>
                     <!-- post content -->
                     <div class="mt-3">
                         <!-- content -->
                         <div>
-                            <h6>{{blog.title}}</h6>
+                            <h5>{{blog.title}}</h5>
                             <p>
                                 {{blog.description}}
                             </p>
@@ -419,59 +421,6 @@
                                         aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                         <hr />
                                         <div class="accordion-body ">
-                                            <div class="comment_body{{blog.id}}">
-                                                {% for comment in blog.blog_comment.all %}
-                                                <!-- comment 1 -->
-                                                <div class="d-flex align-items-center my-1">
-                                                    <!-- avatar -->
-                                                    <img src="{{comment.user.profile_pic.url}}" alt="avatar"
-                                                        class="rounded-circle me-2" style="
-                                    width: 38px;
-                                    height: 38px;
-                                    object-fit: cover;
-                                  " />
-                                                    <!-- comment text -->
-                                                    <div class="p-3 rounded comment__input w-100">
-                                                        <!-- comment menu of author -->
-                                                        <div class="d-flex justify-content-end">
-                                                            <!-- icon -->
-                                                            <i class="fas fa-ellipsis-h text-blue pointer"
-                                                                id="post1CommentMenuButton" data-bs-toggle="dropdown"
-                                                                aria-expanded="false"></i>
-                                                            <!-- menu -->
-                                                            <ul class="dropdown-menu border-0 shadow"
-                                                                aria-labelledby="post1CommentMenuButton">
-                                                                <li class="d-flex align-items-center">
-                                                                    <a class="
-                                            dropdown-item
-                                            d-flex
-                                            justify-content-around
-                                            align-items-center
-                                            fs-7
-                                          " href="#">
-                                                                        Edit Comment</a>
-                                                                </li>
-                                                                <li class="d-flex align-items-center">
-                                                                    <a class="
-                                            dropdown-item
-                                            d-flex
-                                            justify-content-around
-                                            align-items-center
-                                            fs-7
-                                          " href="#">
-                                                                        Delete Comment</a>
-                                                                </li>
-                                                            </ul>
-                                                        </div>
-                                                        <p class="fw-bold m-0">{{comment.user}}</p>
-                                                        <p class="m-0 fs-7 bg-gray p-2 rounded">
-                                                            {{comment.comment}}
-                                                        </p>
-                                                    </div>
-                                                </div>
-                                                {% endfor %}
-                                            </div>
-
                                             <!-- create comment -->
                                             <form id="commentForm{{blog.id}}">
                                                 <div class="d-flex my-1 comment">
@@ -479,10 +428,10 @@
                                                     <div>
                                                         <img src="{{request.user.profile_pic.url}}" alt="avatar"
                                                             class="rounded-circle me-2" style="
-                                      width: 38px;
-                                      height: 38px;
-                                      object-fit: cover;
-                                    " />
+                               width: 38px;
+                               height: 38px;
+                               object-fit: cover;
+                             " />
                                                     </div>
                                                     {% csrf_token %}
                                                     <!-- input -->
@@ -491,11 +440,79 @@
                                                     <input type="text"
                                                         class="comment_input form-control border-0 rounded-pill bg-gray"
                                                         placeholder="Write a comment" />
-                                                    <span class="btn btn-warning ms-2 add_comment"
+                                                    <span class="btn btn-primary ms-2 add_comment"
                                                         role="button">ADD</span>
+                                                    <span class="btn btn-warning ms-2 edit_comment_btn d-none"
+                                                        role="button">EDIT</span>
+
                                                 </div>
                                             </form>
                                             <!-- end -->
+                                            <div class="comment_body{{blog.id}}">
+                                                {% for comment in blog.blog_comment.all%}
+                                                <!-- comment 1 -->
+                                                <hr>
+                                                <div class="d-flex align-items-center my-1 px-3">
+                                                    <!-- avatar -->
+                                                    <img src="{{comment.user.profile_pic.url}}" alt="avatar"
+                                                        class="rounded-circle me-2" style="
+                                width: 38px;
+                                height: 38px;
+                                object-fit: cover;
+                              " />
+                                                    <!-- comment text -->
+                                                    <div class="p-3 rounded comment__input w-100">
+                                                        {% if comment.user == request.user%}
+                                                        <!-- comment menu of author -->
+                                                        <div class="d-flex justify-content-end">
+                                                            <!-- icon -->
+                                                            <i class="fas fa-ellipsis-h text-blue pointer"
+                                                                id="post1CommentMenuButton" data-bs-toggle="dropdown"
+                                                                aria-expanded="false" role="button"></i>
+                                                            <!-- menu -->
+                                                            <ul class="dropdown-menu border-0 shadow edit_comment_container"
+                                                                aria-labelledby="post1CommentMenuButton">
+                                                                <li class="d-flex align-items-center">
+                                                                    <a class="edit_comment
+                                        dropdown-item
+                                        d-flex
+                                        justify-content-around
+                                        align-items-center
+                                        fs-7
+                                      " href="#">
+                                                                        Edit Comment</a>
+                                                                </li>
+                                                                <li class="d-flex align-items-center">
+                                                                    <a class="delete_comment
+                                        dropdown-item
+                                        d-flex
+                                        justify-content-around
+                                        align-items-center
+                                        fs-7
+                                      " href="#">
+                                                                        Delete Comment</a>
+                                                                </li>
+                                                                <input type="hidden" name="" class="blog_id"
+                                                                    value="{{blog.id}}">
+                                                                <input class="comment_id" type="hidden" name=""
+                                                                    value="{{comment.id}}">
+                                                            </ul>
+
+                                                        </div>
+                                                        {% endif %}
+                                                        <p class=" m-0 text-muted">{{comment.user}} |
+                                                            <span class="">{{comment.updated_at|timesince}}
+                                                                ago</span>
+                                                        </p>
+                                                        <p class="m-0 fs-7 bg-gray py-2 rounded">
+                                                            {{comment.comment}}
+                                                        </p>
+                                                    </div>
+                                                </div>
+                                                {% endfor %}
+                                            </div>
+
+
                                         </div>
                                     </div>
                                 </div>
