--- a/blogapp/templates/signup.html
+++ b/blogapp/templates/signup.html
@@ -63,7 +63,11 @@
                     <div class="text-center mt-3">
                         <button type="submit" class="btn btn-success btn-lg" data-bs-dismiss="modal">Sign
                             Up</button>
+
                     </div>
+                    <p class="text-center mt-3">
+                        <a href="{% url 'signin' %}" class=" text-primary">Already have an account?</a>
+                    </p>
                 </form>
             </div>
         </div>
