--- a/blogapp/templates/includes/navbar.html
+++ b/blogapp/templates/includes/navbar.html
@@ -1,4 +1,5 @@
-<div class="bg-white d-flex align-items-center fixed-top shadow" style="min-height: 56px; z-index: 5">
+<div class="bg-white d-flex align-items-center shadow w-100"
+    style="min-height: 56px; position: fixed; top: 0; z-index: 12;">
     <div class="container">
         <div class="row align-items-center">
             <!-- search -->
