--- a/blogapp/templates/other-profile.html
+++ b/blogapp/templates/other-profile.html
@@ -49,15 +49,15 @@
 
         </div>
 
-        <div class="row d-flex justify-content-around p-0 text-center">
+        <div class="row d-flex justify-content-around p-0 text-center overflow-hidden">
             <div class="col-3">
                 <h4>{{user.user_blog.all.count}}</h4>
-                <h4>Posts</h4>
+                <h6>Posts</h6>
             </div>
             <div class="col-3">
                 <div data-bs-toggle="modal" data-bs-target="#followers" role="button">
                     <h4>{{user.user_profile.get_followers_count}}</h4>
-                    <h4>Followers</h4>
+                    <h6>Followers</h6>
                 </div>
 
                 <!-- Modal -->
@@ -103,7 +103,7 @@
             <div class="col-3">
                 <div data-bs-toggle="modal" data-bs-target="#following" role="button">
                     <h4>{{user.user_profile.get_following_count}}</h4>
-                    <h4>Following</h4>
+                    <h6>Following</h6>
                 </div>
 
                 <!-- Modal -->
@@ -274,7 +274,7 @@
                                 align-items-center
                                 pointer
                                 text-muted
-                                p-1
+                                
                                 w-50
                               " data-bs-toggle="collapse" data-bs-target="#collapsePost{{blog.id}}"
                                             aria-expanded="false" aria-controls="collapsePost{{blog.id}}" role="button">
@@ -318,7 +318,7 @@
                                                 {% for comment in blog.blog_comment.all%}
                                                 <!-- comment 1 -->
                                                 <hr>
-                                                <div class="d-flex align-items-center my-1 px-3">
+                                                <div class="d-flex align-items-center my-1 px-lg-3">
                                                     <!-- avatar -->
                                                     <img src="{{comment.user.profile_pic.url}}" alt="avatar"
                                                         class="rounded-circle me-2" style="
