--- a/blogapp/templates/profile_add.html
+++ b/blogapp/templates/profile_add.html
@@ -4,7 +4,7 @@
 
 <div class="container">
 
-    <form class="mx-auto w-100" style="margin-top: 7%; max-width: 500px;" action="" method="post">
+    <form class="mx-auto w-100 add_profile" style="margin-top: 7%; max-width: 500px;" action="" method="post">
         <h4 class="text-center text-muted">Profile</h4>
         {% csrf_token %}
         {{form}}
