--- a/blogapp/templates/search.html
+++ b/blogapp/templates/search.html
@@ -2,9 +2,9 @@
 {% load static %}
 {% block content %}
 
-<div class="row mt-5">
+<div class="row">
 
-    <div class="col-lg-6 mx-auto">
+    <div class="col-lg-6 mx-lg-auto" style="z-index: 10;">
 
         <div class="pb-5">
             <div class="d-flex flex-column justify-content-center w-100 mx-auto" style="padding-top: 56px;">
