--- a/blogapp/templates/home.html
+++ b/blogapp/templates/home.html
@@ -339,7 +339,7 @@
                                                         class="form-control my-3 " maxlength="120" required=""
                                                         id="id_title">
                                                     <textarea name="description" placeholder="Description"
-                                                        class="form-control " cols="40" rows="10" required=""
+                                                        class="form-control " cols="40" rows="10"
                                                         id="id_description"></textarea>
                                                 </div>
 
